@@ -24,7 +24,7 @@
     </tr>
     <tr>
       <th>Latest Stable Release</th>
-      <td><a href="v4.0.2.html">v4.0.2</a></td>
+      <td><a href="v4.0.3.html">v4.0.3</a></td>
     </tr>
     <tr>
       <th>Master Download Site</th>
